WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
266385
REGRESSION (
271514@main
): MSE Live playback fails on umediaserver.net
https://bugs.webkit.org/show_bug.cgi?id=266385
Summary
REGRESSION (271514@main): MSE Live playback fails on umediaserver.net
Jean-Yves Avenard [:jya]
Reported
2023-12-13 18:25:44 PST
Steps To Reproduce: goto
http://www.umediaserver.net/umediaserver/demohtml5MSEplayer.html
video doesn't start
Attachments
Add attachment
proposed patch, testcase, etc.
Jean-Yves Avenard [:jya]
Comment 1
2023-12-13 18:26:02 PST
rdar://119615258
Jean-Yves Avenard [:jya]
Comment 2
2023-12-13 18:32:47 PST
Pull request:
https://github.com/WebKit/WebKit/pull/21776
EWS
Comment 3
2023-12-14 02:35:27 PST
Committed
272025@main
(9f3ddc119f3e): <
https://commits.webkit.org/272025@main
> Reviewed commits have been landed. Closing PR #21776 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug